--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Typescript library for generating pseudo-random dummy values",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "test": "npx jest --verbose",
+    "test:q": "npx jest",
+    "test:w": "npx jest --verbose --watch",
+    "test:qw": "npx jest --watch",
     "lint": "npx eslint . --ext .ts,.tsx",
     "lint:fix": "npx eslint . --ext .ts,.tsx --fix"
   },
@@ -32,12 +36,15 @@
   "homepage": "https://github.com/brannonh/value-sculptor#readme",
   "dependencies": {},
   "devDependencies": {
+    "@types/jest": "^24.9.1",
     "@typescript-eslint/eslint-plugin": "^2.17.0",
     "@typescript-eslint/parser": "^2.17.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "jest": "^25.1.0",
     "prettier": "1.19.1",
+    "ts-jest": "^25.0.0",
     "typescript": "^3.7.5"
   }
 }
