Updated package description.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "value-sculptor",
   "version": "0.2.3",
-  "description": "Library for generating pseudo-random dummy values",
+  "description": "Library for generating pseudo-random values that follow known patterns and can be used in various ways (e.g., as example data, for testing purposes, etc.).",
   "main": "lib/index.js",
   "files": [
     "lib/**/*"
